# agents-course

./: pyproject.toml
notebooks/unit1/: dummy_agent_library.ipynb
notebooks/unit2/smolagents/: code_agents.ipynb
notes/: concepts.md  concepts.mdx  onboarding.md  onboarding.mdx  s1-l4-tools.ipynb  s1-l4-tools.md  s1_l3_messages_special_tokens.md  s1_l5_agents_steps.md  u1_t2_llm.md  u1_t2_llm_pt.md  u1_t3_tools_.md  u1_t3_tools_pt.md  u1_t4_agent_pt.md  u1_t4_agents.md  u1_t4_mermaid.md  u1_t5_dummy_agent.ipynb  u1_t6_smolagent.ipynb
notes/unit_02/: L1_agents_pt.md  L2_quiz.md  L2_smolagents_pt.md
src/examples/: chat_template_viewer.py
